--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>This is my first web page</h1>
-<h2>Hishaam Ali   </h2>
+<h1>This is my first web page.</h1>
+<h2>Hishaam Ali.</h2>
 </body>
 </html>
