--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>A website</title>
 </head>
 <body>
 <h1>This is my first web page.</h1>
-<h2>Hishaam Ali .</h2>
-<h3>Did this work</h3>
+<h2>Hishaam Ali.</h2>
+<h3>Did this work?</h3>
 </body>
 </html>
