--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+
+        h1 {
+            color: white;
+            text-align: center;
+        }
+
+        h2 {
+            color: white;
+            text-align: centre;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <title>A website</title>
 </head>
 <body>
 <h1>This is my first web page.</h1>
 <h2>Hishaam Ali.</h2>
-<h3>Did this work?</h3>
+<p1>Did this work?</p1>
 </body>
 </html>
