--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 
         h2 {
             color: white;
-            text-align: centre;
+            text-align: center;
         }
 
     </style>
