Added styling for h3

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,13 @@
             text-align: center;
         }
 
+        h3{
+            color: black;
+            text-align: left;
+            font-size: 20px;
+
+        }
+
     </style>
     <meta charset="UTF-8">
     <title>A website</title>
@@ -23,6 +30,7 @@
 <body>
 <h1>This is my first web page.</h1>
 <h2>Hishaam Ali.</h2>
-<p1>Did this work?</p1>
+<h3>The beginning...</h3>
+
 </body>
 </html>
