--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
             text-align: center;
         }
 
-        h3{
+        h3 {
             color: black;
             text-align: left;
             font-size: 30px;
@@ -29,8 +29,8 @@
 </head>
 <body>
 <img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438">
-<h1>This is my first web page.</h1>
-<h2>Hishaam Ali.</h2>
+<h1>Tupac vs. Biggie</h1>
+<h2>By Hishaam Ali.</h2>
 <h3>The beginning...</h3>
 
 </body>
