--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
     <title>A website</title>
 </head>
 <body>
-<img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438">
+<img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438" align="center">
 <h1>Tupac vs. Biggie</h1>
 <h2>By Hishaam Ali.</h2>
 <h3>The beginning...</h3>
