--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,18 @@
 <h1>Tupac vs. Biggie</h1>
 <h2>By Hishaam Ali.</h2>
 <h3>The beginning...</h3>
+<p>When you listened to Big, you didn't need a beat in the background—he was the beat.  I'd argue this comes from his beginnings with beatboxing.  His rhymes and his delivery was tighter, his syllables more pronounced, and as Ben Peters said, he approached stories more through metaphor and imagery.
+
+    Tupac, on the other hand, at least in the above scenario, sounds like a novice rapper.  His flow isn't as tight, it is off-rhythm at certain points (he even admits it in the first few lines), and his rhymes are simple and lacking of any heart we see in many of his legendary songs.  The reason is because Tupac didn't thrive or approach rap the same way as Big because Tupac was not a rapper.
+
+    Stories have been told of how Tupac used to go to the bathroom between studio sessions and return back with pages upon pages of raps written, and he would just say, "Put me in the booth and let's go."  His raps were a sort of jazz, prewritten moreso as prose and then spontaneously fit to the beat however they came out.
+
+    It wasn't until later that he started to approach his raps with a Shakespearian twist.  He wrote some songs in Iambic Pentameter and other more formal poetic schemes—the deeper message here being that he was using a "white writing style" to convey his black message, a theme of his since the beginning.  It was this sort of over-your-head intelligence Tupac was best known for, sneaking in cultural messages wherever he could.
+
+    The question posed here however, I think has less to do with the formal definition of a "rapper" (who was the better "rapper?") and more to do with who was more skilled?  Possibly who was more influential?  Who made better music?
+
+    It's hard to say, since both Biggie and Tupac relied on each other and each other's participation in the beef to springboard their careers to legendary historical heights, but I can say from my own listening of the two over however many years, that I have always kept Tupac as number 1.  Reason being, he was aiming for the heart and he rarely ever missed.  If we're judging based on who painted a better picture of what growing up in Bed Stuy Brooklyn was like, one could argue Biggie, but then I'd point you to something like Tupac's "Mama's Just A Little Girl" and ask if your mind isn't filled with vivid imagery through that entire song—and more so, if it doesn't hit you in the center of your heart.
+</p>
 
 </body>
 </html>
