Re-aligned text

--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,13 @@
 
         h3 {
             color: black;
-            text-align: left;
+            text-align: center;
             font-size: 30px;
+
+        }
+
+        p {
+            text-align: center;
 
         }
 
