--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
         }
 
         h1 {
-            color: white;
+            color: navajowhite;
             text-align: center;
         }
 
@@ -18,7 +18,7 @@
         }
 
         h3 {
-            color: black;
+            color: white;
             text-align: center;
             font-size: 30px;
 
