--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: lightblue;
+            background-color: #57574F;
         }
 
         h1 {
@@ -31,11 +31,10 @@
 
     </style>
     <meta charset="UTF-8">
-    <title>A website</title>
+    <title>Tupac vs. Biggie</title>
 </head>
 <body>
-<p style="text-align:center;"><img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438" align="middle"></p>>
-
+<p style="text-align:center;"><img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438" align="middle"></p>
 <h1>Tupac vs. Biggie</h1>
 <h2>By Hishaam Ali.</h2>
 <h3>The beginning...</h3>
