--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,15 @@
             background-color: #57574F;
         }
 
+        title{
+            color: white;
+            text-align: center;
+        }
+
         h1 {
             color: white;
             text-align: center;
+            font-size: 50px;
         }
 
         h2 {
@@ -17,11 +23,10 @@
             font-size: 10px;
         }
 
-        h3 {
+        h3{
             color: white;
             text-align: center;
             font-size: 30px;
-
         }
 
         p {
@@ -34,8 +39,9 @@
     <title>Tupac vs. Biggie</title>
 </head>
 <body>
-<p style="text-align:center;"><img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438" align="middle"></p>
 <h1>Tupac vs. Biggie</h1>
+<p style="text-align:center;"><img src="https://s-media-cache-ak0.pinimg.com/originals/90/b4/28/90b4286df675b8b085a91bfdd62caaf0.jpg" alt="Tupac|Biggie" height="620" width="438" align="middle"></p>
+
 <h2>By Hishaam Ali.</h2>
 <h3>The beginning...</h3>
 <p>When you listened to Big, you didn't need a beat in the background—he was the beat.  I'd argue this comes from his beginnings with beatboxing.  His rhymes and his delivery was tighter, his syllables more pronounced, and as Ben Peters said, he approached stories more through metaphor and imagery.
