added google hyperlink

--- a/Index.html
+++ b/Index.html
@@ -47,5 +47,7 @@
     It's hard to say, since both Biggie and Tupac relied on each other and each other's participation in the beef to springboard their careers to legendary historical heights, but I can say from my own listening of the two over however many years, that I have always kept Tupac as number 1.  Reason being, he was aiming for the heart and he rarely ever missed.  If we're judging based on who painted a better picture of what growing up in Bed Stuy Brooklyn was like, one could argue Biggie, but then I'd point you to something like Tupac's "Mama's Just A Little Girl" and ask if your mind isn't filled with vivid imagery through that entire song—and more so, if it doesn't hit you in the center of your heart.
 </p>
 
+<a href=http://www.google.com>Google!</a>
+
 </body>
 </html>
