--- a/Index.html
+++ b/Index.html
@@ -67,6 +67,12 @@
     </p>
 </main>
 
+<footer>
+    <a href="http://www.google.com">Google!</a>
+    <p>Hishaam Ali</p>
+
+</footer>
+
 
 </body>
 </html>
