--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,10 @@
 
         }
 
+        a {
+            text-align: center;
+        }
+
     </style>
     <meta charset="UTF-8">
     <title>Tupac vs. Biggie</title>
